update link to photos once uploaded

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="C:\Users\crypt\OneDrive\Training Courses\HTML\atom builds\Atom Training\HTML Personal site\caddygrayFront-modified.png"
+      <td><img src="caddygrayFront-modified.png"
                     height="200" width="200" alt="Caddy's Profile Picture" </td>
       <td>
         <h1> Crypto Caddy </h1>
